# nash

./: README.md  pyproject.toml
.github/workflows/: ci.yml
Formula/: gametheorist.rb
src/gametheorist/: __init__.py  __main__.py  app.py  theme.py
src/gametheorist/css/: app.tcss
src/gametheorist/modules/: __init__.py  registry.py
src/gametheorist/modules/birthday/: __init__.py  engine.py  screen.py  widgets.py
src/gametheorist/modules/coin/: __init__.py  engine.py  screen.py  widgets.py
src/gametheorist/modules/gambler/: __init__.py  engine.py  screen.py  widgets.py
src/gametheorist/modules/monty/: __init__.py  engine.py  screen.py  widgets.py
src/gametheorist/modules/prisoner/: __init__.py  engine.py  screen.py  widgets.py
src/gametheorist/screens/: about.py  home.py
src/gametheorist/widgets/: __init__.py  chart.py  lesson_panel.py  stats_bar.py
